--- a/CRC_Example_1/appsettings.json
+++ b/CRC_Example_1/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LYDIA;Database=CRC_TestDB;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=SERVER_NAME;Database=DATABASE_NAME;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
